src/main/java/com/example/incidentplatform/common/error/NotFoundException.java
package com.example.incidentplatform.common.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}
